# nfl-draft-app

./: .env  .gitignore  DEPLOYMENT.md  Procfile  README.md  pyproject.toml  railway.json  railway.toml  requirements.txt  startup.sh  test_replacement_calc.py
.streamlit/: config.toml
auth/: cookies.json
data/: fantasy_pros.db
data/nfl_logos/: logo_mapping.json
data/raw_projections/: dst_adp.csv  dst_projections.csv  k_projections.csv  overall_adp.csv  qb_adp.csv  qb_projections.csv  rb_adp.csv  rb_projections.csv  te_adp.csv  te_projections.csv  wr_adp.csv  wr_projections.csv
docs/: 01_scraping_plan.md  draft_tool_plan.md  status.md  vona_calculation_explained.md
src/nfl_draft_app/: __init__.py  app.py
src/nfl_draft_app/pages/: admin.py  draft_tool.py
src/nfl_draft_app/scripts/: 01_download_projections.py  01a_generate_cookies.py  02_process_projections.py  03_setup_draft_tables.py  03_setup_draft_tables_pg.py  04_download_nfl_logos.py
src/nfl_draft_app/utils/: __init__.py  admin_utils.py  database.py  draft_logic.py  logo_utils.py
tasks/: tasks.md
